--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,75 @@
+.h2-title {
+  font-family: Roboto;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  text-transform: uppercase;
+  text-align: center; }
+  .h2-title--blue {
+    color: #374f63; }
 
+.conditions {
+  padding-top: 80px;
+  position: relative;
+  margin-bottom: 215px; }
+  .conditions::after {
+    content: '';
+    width: 100%;
+    height: 215px;
+    position: absolute;
+    bottom: -215px;
+    background: #bdddf4 url("../img/conditions-trailer-bottom.png"); }
 
-/*# sourceMappingURL=style2.css.map */
+.condition-paragraph {
+  max-width: 775px;
+  margin: auto;
+  text-align: center;
+  color: #384f63;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px; }
+
+.conditions-price_item {
+  max-width: 225px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 20%;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+  text-align: center; }
+
+.conditions-price_item__bottom {
+  margin-top: 75px; }
+
+.conditions-price_image {
+  margin: auto;
+  margin-bottom: 30px;
+  width: 177px;
+  height: 178px;
+  border: 5px solid #384f63;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  .conditions-price_image img {
+    margin: auto; }
+
+.conditions-price-row {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.conditions-price_title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #374f63; }
+
+.conditions-price_time {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  color: #374f63; }
