--- a/css/style2.css
+++ b/css/style2.css
@@ -5,6 +5,10 @@
   line-height: 58px;
   text-transform: uppercase;
   text-align: center; }
+  @media all and (max-width: 1140px) {
+    .h2-title {
+      font-size: 28px;
+      line-height: 38px; } }
   .h2-title--blue {
     color: #374f63; }
 
@@ -12,13 +16,21 @@
   padding-top: 80px;
   position: relative;
   margin-bottom: 215px; }
+  @media all and (max-width: 1140px) {
+    .conditions {
+      margin-bottom: 115px; } }
   .conditions::after {
     content: '';
     width: 100%;
     height: 215px;
     position: absolute;
     bottom: -215px;
-    background: #bdddf4 url("../img/conditions-trailer-bottom.png"); }
+    background: #bdddf4 url("../img/conditions-trailer-bottom.png");
+    background-size: cover; }
+    @media all and (max-width: 1140px) {
+      .conditions::after {
+        height: 115px;
+        bottom: -115px; } }
 
 .condition-paragraph {
   max-width: 775px;
@@ -28,6 +40,14 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 28px; }
+  @media all and (max-width: 1140px) {
+    .condition-paragraph {
+      font-size: 14px;
+      line-height: 18px; } }
+
+@media all and (max-width: 1140px) {
+  .conditions-price {
+    margin-top: 30px; } }
 
 .conditions-price_item {
   max-width: 225px;
@@ -36,9 +56,15 @@
       -ms-flex: 0 0 20%;
           flex: 0 0 20%;
   text-align: center; }
+  @media all and (max-width: 1140px) {
+    .conditions-price_item {
+      margin-bottom: 20px; } }
 
 .conditions-price_item__bottom {
   margin-top: 75px; }
+  @media all and (max-width: 1140px) {
+    .conditions-price_item__bottom {
+      margin-top: 0; } }
 
 .conditions-price_image {
   margin: auto;
@@ -60,6 +86,12 @@
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  @media all and (max-width: 1140px) {
+    .conditions-price-row {
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; } }
 
 .conditions-price_title {
   font-size: 20px;
