--- a/css/style.scss
+++ b/css/style.scss
@@ -73,8 +73,8 @@ body{
 
 
 .container-fluid{
-	//outline: 1px solid red;
-	max-width: 1330px;
+	outline: 1px solid red;
+	max-width: 1360px;
 }
 strong{
 	font-weight: 700;
@@ -94,35 +94,48 @@ strong{
 .main-menu{
 	width: 100%;
 	text-align: right;
+	@media screen and (min-width: 960px) {
+		padding-top: 63px;
+	}
 	li{
 		display: inline-block;
-		margin-left: 30px;
-		margin-right: 30px;
+		//margin-left: 24px;
+		margin-right: 54px;
 		a{
 			color: #384f63;
 			font-size: 24px;
+			letter-spacing: 0.05em;
 
 		}
 		&:last-child{
 			margin-right: 0px;
-			margin-left: 0px;
+			
 		}
 	}
 }
 .header{
-	position: relative;
-	height: 205px;
+	position: absolute;
+	//height: 205px;
+	padding: 20px 0px;
+	z-index: 58;
+	outline: 10px solid blue;
+	opacity: .80;
+	background: #fff;
+
 }
 .header:after{
 	position: absolute;
 	content: "";
 	width: 100%;
-	height: 179px;
+	height: 159px;
 	background-size: cover;
 	background: url(../img/header_trailer.png) no-repeat top center;
-	bottom: -150px;
+	//bottom: -120px;
 	left: 0px;
+	top: 120px;
 	outline: 10px solid red;
+	z-index: 60;
+	
 }
 .header-block{
 	background: url(../img/header.jpg) no-repeat top center;
@@ -130,6 +143,7 @@ strong{
 	background-size: cover;
 	padding-top: 250px;
 	text-align: center;
+	z-index: 50;
 	h1.header-block_h1{
 		font-size: 60px;
 		letter-spacing: 0.05;
