--- a/includes/content-service.pug
+++ b/includes/content-service.pug
@@ -4,7 +4,7 @@
             .row
                 .col-md-12
                     h2.h2-title.conditions-title.h2-title__blue РАСПИСАНИЕ И УСЛОВИЯ
-                    p.condition-paragraph Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино «Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем<br> либо оплачивается из расчета 1кг – 300руб.
+                    p.condition-paragraph Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино «Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем либо оплачивается из расчета 1кг – 300руб.
         .conditions-price
             .row.conditions-price-row
                 .col-md-2.conditions-price_item
@@ -104,3 +104,5 @@
         .row
             h2.h2-title.rest-title.h2-title__blue База «Три Пескаря» организована<br> для отдыха, спортивного любительского рыболовства, а не для рыбного промысла
             p.rest-text За не выловленную рыбу компенсация не производится. Категорически запрещается:<br> разводить костры на берегу пруда, отпускать пойманную рыбу, ловить с лодок, ловля на резинку, телевизор и т.д.. Просьба во время рыбной ловли не шуметь, не мешать другим рыбакам, выбрасывать мусор в специально отведенные баки.. Автомобили паркуются строго<br> на выделенной стоянке.. Администрация оставляет за собой право<br> не допускать рыбаков на территорию «Три Пескаря»<br> без объяснения причин.
+block carousel
+    include owl-carousel.pug
