--- a/service.pug
+++ b/service.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 block header
     - var title ="Услуги";
-    include includes/header.pug
+    include includes/service-header.pug
 block content
     include includes/content-service.pug
 block footer
