--- a/css/style2.css
+++ b/css/style2.css
@@ -5,7 +5,8 @@
   font-weight: 700;
   line-height: 58px;
   text-transform: uppercase;
-  text-align: center; }
+  text-align: center;
+  letter-spacing: 1.2px; }
   @media all and (max-width: 1140px) {
     .h2-title {
       font-size: 28px;
@@ -35,14 +36,18 @@
         height: 115px;
         bottom: -115px; } }
 
+.conditions-title {
+  margin-bottom: 25px; }
+
 .condition-paragraph {
-  max-width: 775px;
+  max-width: 800px;
   margin: auto;
   text-align: center;
   color: #384f63;
   font-size: 18px;
   font-weight: 400;
-  line-height: 28px; }
+  line-height: 28px;
+  letter-spacing: 0.4px; }
   @media all and (max-width: 1140px) {
     .condition-paragraph {
       font-size: 14px;
@@ -71,7 +76,7 @@
 
 .conditions-price_image {
   margin: auto;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   width: 177px;
   height: 178px;
   border: 5px solid #384f63;
@@ -103,7 +108,8 @@
   font-weight: 700;
   line-height: 24px;
   color: #374f63;
-  display: block; }
+  display: block;
+  margin-bottom: 10px; }
 
 .conditions-price_time {
   font-size: 16px;
@@ -117,7 +123,7 @@
   background: #bdddf4;
   position: relative;
   padding-bottom: 90px;
-  padding-top: 85px; }
+  padding-top: 92px; }
   @media all and (max-width: 1140px) {
     .extra {
       padding-bottom: 40px;
@@ -178,7 +184,7 @@
   line-height: 24px;
   color: #374f63;
   display: block;
-  margin-bottom: 10px; }
+  margin-bottom: 7px; }
 
 .extra_item-text {
   font-size: 16px;
@@ -232,11 +238,11 @@
 
 /* Rent Block */
 .rent {
-  padding-top: 270px;
+  padding-top: 278px;
   padding-bottom: 295px;
-  background: transparent url("../img/rent-bg.png") 0px 0px no-repeat;
+  background: transparent url("../img/rent-bg.png") 0px -17px no-repeat;
   background-size: cover;
-  margin-bottom: -215px;
+  margin-bottom: -250px;
   position: relative;
   z-index: 98; }
   @media all and (max-width: 1140px) {
@@ -245,10 +251,10 @@
       padding-bottom: 195px; } }
 
 .rent-title {
-  margin-bottom: 60px; }
+  margin-bottom: 45px; }
 
 .rent-staff {
-  padding-top: 85px;
+  padding-top: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -265,7 +271,7 @@
   -ms-flex-preferred-size: 50%;
   -webkit-flex-basis: 50%;
           flex-basis: 50%;
-  margin-bottom: 25px; }
+  margin-bottom: 20px; }
   @media all and (max-width: 768px) {
     .rent-staff_item {
       text-align: center; } }
@@ -310,8 +316,16 @@
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  -webkit-justify-content: center;
-          justify-content: center; }
+  -webkit-justify-content: flex-start;
+          justify-content: flex-start;
+  margin-left: 75px; }
+  @media all and (max-width: 1140px) {
+    .rent-img {
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin-left: 0; } }
   .rent-img img {
     max-width: 100%; }
 
@@ -319,8 +333,8 @@
 .offer {
   background: url("../img/offer-bg.png") 50% 0 no-repeat;
   background-size: cover;
-  padding-bottom: 300px;
-  padding-top: 315px;
+  padding-bottom: 290px;
+  padding-top: 343px;
   position: relative;
   z-index: 97;
   margin-bottom: -310px; }
@@ -411,3 +425,70 @@
     .rest-text {
       font-size: 14px;
       line-height: 24px; } }
+
+/* Стили для каруселя */
+.carousel-wrapper {
+  background-color: #3d3d3d; }
+
+.fish-slider {
+  position: relative;
+  width: 82%;
+  max-width: 1075px;
+  margin: auto; }
+
+.carousel-button {
+  border: 0;
+  outline: 0;
+  display: block;
+  width: 48px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  z-index: 999; }
+  @media all and (max-width: 992px) {
+    .carousel-button {
+      width: 24px;
+      height: 45px; } }
+
+.arr-left {
+  left: -130px;
+  background: url("../img/arrow-left.svg") 0 0 no-repeat;
+  background-size: cover; }
+  @media all and (max-width: 1330px) {
+    .arr-left {
+      left: -100px; } }
+  @media all and (max-width: 1200px) {
+    .arr-left {
+      left: -80px; } }
+  @media all and (max-width: 992px) {
+    .arr-left {
+      left: -60px; } }
+  @media all and (max-width: 768px) {
+    .arr-left {
+      left: -40px; } }
+  @media all and (max-width: 480px) {
+    .arr-left {
+      left: -40px; } }
+
+.arr-right {
+  right: -130px;
+  background: url("../img/arrow-right.svg") 0 0 no-repeat;
+  background-size: cover; }
+  @media all and (max-width: 1330px) {
+    .arr-right {
+      right: -100px; } }
+  @media all and (max-width: 1200px) {
+    .arr-right {
+      right: -80px; } }
+  @media all and (max-width: 992px) {
+    .arr-right {
+      right: -60px; } }
+  @media all and (max-width: 768px) {
+    .arr-right {
+      right: -40px; } }
+  @media all and (max-width: 480px) {
+    .arr-right {
+      right: -40px; } }
