--- a/includes/content-home.pug
+++ b/includes/content-home.pug
@@ -41,4 +41,62 @@
 				span.we-offer__title МЫ ПРЕДЛАГАЕМ
 				.we-offer__description.
 					Каждая минута рыбалки в Лыткино стоит того: тишина предрассветных <br> часов, запахи утреннего леса, плеск весел и размеренное покачивание лодки, ожидание, <br>ропитанное умиротворением окружающей природы… И радость первого улова, <br> ни с чем не сравнимое ощущение того, что твои усилия <br> стократно окупились сторицей. Пруд в Лыткино - это:
+.home-service
+	.container-fluid
+		.row
+			.col-lg-3
+				.service-item
+					.service-item__imgbox
+						img(src="img/hs1.png")
+					.service-item__title.
+						Рыбалка <br> и VIP рыбалка
+			.col-lg-3
+				.service-item
+					.service-item__imgbox
+						img(src="img/hs2.png")
+					.service-item__title.
+						Финно- <br> угорское копчение
+			.col-lg-3
+				.service-item
+					.service-item__imgbox
+						img(src="img/hs3.png")
+					.service-item__title.
+						Прокат <br> снастей
+			.col-lg-3
+				.service-item
+					.service-item__imgbox
+						img(src="img/hs4.png")
+					.service-item__title.
+						Уютные <br> домики на берегу
+.home-articles
+	.container-fluid
+		.row
+			.col-lg-3
+				.article-item
+					.article-item__date 04.07.2017
+					.article-item__title Lorem ipsum dolor sit amet
+					.article-item__desc.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					a(href="#" class="article-item__more") ЧИТАТЬ ПОЛНОСТЬЮ
+			.col-lg-3
+				.article-item
+					.article-item__date 04.07.2017
+					.article-item__title Lorem ipsum dolor sit amet
+					.article-item__desc.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					a(href="#" class="article-item__more") ЧИТАТЬ ПОЛНОСТЬЮ
+			.col-lg-3
+				.article-item
+					.article-item__date 04.07.2017
+					.article-item__title Lorem ipsum dolor sit amet
+					.article-item__desc.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					a(href="#" class="article-item__more") ЧИТАТЬ ПОЛНОСТЬЮ
+			.col-lg-3
+				.article-item
+					.article-item__date 04.07.2017
+					.article-item__title Lorem ipsum dolor sit amet
+					.article-item__desc.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					a(href="#" class="article-item__more") ЧИТАТЬ ПОЛНОСТЬЮ
 include owl-carousel.pug
