--- a/css/style.scss
+++ b/css/style.scss
@@ -204,6 +204,7 @@ strong{
 	padding-top: 300px;
 	text-align: center;
 	z-index: 30;
+	position: relative;
 	color: #374f63;
 	&__title{
 		display: block;
@@ -223,6 +224,75 @@ strong{
 		margin-bottom: 70px;
 	}
 }
+.home-service{
+	position: relative;
+	width: 100%;
+	min-height: 688px;
+	background: url(../img/home_service.png) no-repeat top center;
+	margin-top: -220px;
+	padding-top: 250px;
+	text-align: center;
+	z-index: 20;
+	.service-item{
+		color: #fff;
+		font-size: 26px;
+		line-height: 34px;
+		letter-spacing: 0.025em;
+		font-weight: 900;
+
+	}
+	.col-lg-3:first-child{
+		.service-item{
+			margin-top: -100px;
+		}
+	}
+	.col-lg-3:nth-child(2){
+		.service-item{
+			margin-top: 25px;
+		}
+	}
+}
+
+.home-articles{
+	position: relative;
+	width: 100%;
+	
+	//margin-top: -220px;
+	padding-top: 50px;
+	padding-bottom: 80px;
+	
+
+	z-index: 15;
+	.article-item{
+		color: #51718e;
+		&__date{
+			font-size: 14px;
+			margin-bottom: 15px;
+		}
+		&__title{
+			color: #374f63;
+			font-size: 18px;
+			line-height: 36px;
+			font-weight: 700;
+			text-transform: uppercase;
+			margin-bottom: 10px;
+			letter-spacing: 0.015em;
+		}
+		&__desc{
+			
+			letter-spacing: 0.015em;
+			margin-bottom: 10px;
+		}
+		&__more{
+			text-decoration: none;
+			color: #51718e;
+			text-transform: uppercase;
+			letter-spacing: 0.15em;
+			
+		}
+	}
+}
+
 .footer{
 	height: 100px;
 	background: #384e63;
