--- a/includes/content-contacts.pug
+++ b/includes/content-contacts.pug
@@ -1,44 +1,27 @@
-include breadcrumbs.pug
-.container
-	.row
-		.col-lg-11.offset-lg-1.col-md-12
-			.content-part.inner-page
-				h1 Контакты
-				.contacts-block
-					.row
-						.col-lg-4
-							ul.contacts-list
-								li
-									.contacts-block_li_left
-										span.icon-phone_contact
-									.contacts-block_li_right
-										span Телефон:
-										span.cont-bold +7 (3812) 34-12-00
-										span.cont-bold +7 (3812) 49-95-01
-								li
-									.contacts-block_li_left
-										span.icon-mail
-									.contacts-block_li_right
-										span Email:
-										span.cont-bold info@alex-avto55.ru
-								li
-									.contacts-block_li_left
-										span.icon-map_header
-									.contacts-block_li_right
-										span Адрес:
-										span.cont-bold г. Омск, ул. Учебная, 77, 1 этаж
-								li
-									.contacts-block_li_left
-										span.icon-time
-									.contacts-block_li_right
-										span Время работы:
-										span.cont-bold пн - вс: 10:00-20:00 <br> без выходных
-								li
-									.contacts-block_li_left
-										span.icon-car
-									.contacts-block_li_right
-										span Как проехать:
-										span.cont-bold Заезд с улицы Учебная <br> под шлагбаум на территорию
-						.col-lg-7
-							.contacts-page-map
-								#mape
+.map
+.contacts-block
+	.container-fluid
+		.row
+			.col-lg-8
+				.contacts-block__title Пруд в Лыткино 
+				.contacts-block__desc.
+					Найти нас можно по адресу: Московская область, Солнечногорский район, Деревня Лыткино. <br> о водоема легко добраться как общественным транспортом, так и на машине. <br> Котактный телефон: 8-903-799-3141
+		.row.justify-content-center
+			.col-lg-2
+				img(src="c1.png")
+			.col-lg-8
+				.contacts-block__subtitle Общественный транспорт
+				.contacts-block__desc.
+					Электропоездом Ленинградского направления до станции «Крюково» далее авт. №№ 403, 497 до ост. «деревня Лыткино».(время в пути от Крюково до Лыткино приблизительно 30 мин.) Интервал движения автобуса - около 1 часа. Остановка автобуса находится в 50 м. от водоема.
+					Если добираться самым первым общественным транспортом, то первый электропоезд с Ленинградского вокзала отправляется в 04:42 утра и прибывает на ст. «Крюково» в 05:33.  Первый автобус (№ 497) отправляется от Крюково в 06:05 и прибывает в Лыткино в 06:36 утра.
+					Расписание электричек Расписание автобуса
+		.row.justify-content-center
+			.col-lg-2
+				img(src="c2.png")
+			.col-lg-8
+				.contacts-block__subtitle Общественный транспорт
+				.contacts-block__desc.
+					Электропоездом Ленинградского направления до станции «Крюково» далее авт. №№ 403, 497 до ост. «деревня Лыткино».(время в пути от Крюково до Лыткино приблизительно 30 мин.) Интервал движения автобуса - около 1 часа. Остановка автобуса находится в 50 м. от водоема.
+					Если добираться самым первым общественным транспортом, то первый электропоезд с Ленинградского вокзала отправляется в 04:42 утра и прибывает на ст. «Крюково» в 05:33.  Первый автобус (№ 497) отправляется от Крюково в 06:05 и прибывает в Лыткино в 06:36 утра.
+					Расписание электричек Расписание автобуса
+.mappic
