--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -153,5 +153,5 @@ script(src="https://api-maps.yandex.ru/2.1/?lang=tr_TR" type="text/javascript")
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
 script(src="libs/fancybox/jquery.fancybox.js")
 script(src="libs/owl.carousel/owl.carousel.js")
-script(src="https://api-maps.yandex.ru/2.1/?lang=tr_TR" type="text/javascript")
+script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
 script(src="js/common.js")
